# stuff

./: .gitignore  COPYRIGHT  ChangeLog  HISTORY  INSTALL  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  stuff.spec.in
data/extinct/: LMC.ext  LMC_Gordon03.ext  MilkyWay_Fitzpatrick07.ext  README  SMC_bar_Gordon03.ext
data/filters/: README
data/filters/2mass/: H.pb  Ks.pb
data/filters/atmosphere/: maunakea.pb
data/filters/bassel/: u.pb
data/filters/bessell/: Bx.pb  Ic.pb  Ikc.pb  J.pb  K.pb  Lprime.pb  Rc.pb  Rkc.pb  Ux.pb  V.pb
data/filters/buser/: V.pb
data/filters/butcher/: R1075.pb  R576.pb  i.pb  r.pb
data/filters/ctio/: U.pb
data/filters/decam/: Y.pb  i.pb  r.pb  u.pb  z.pb
data/filters/denis/: I.pb
data/filters/dfosc/: V.pb
data/filters/dms/: B.pb  I75.pb  R.pb  U.pb  V.pb
data/filters/eis/: Bwide.pb
data/filters/emmi/: Bwide.pb  I.pb
data/filters/fors/: I.pb  g.pb  r.pb  v_gunn.pb  z.pb
data/filters/hst/: F110W.pb  F222W.pb  F300W.pb  F450W.pb  F606W.pb
data/filters/iras/: 100.pb  12.pb  60.pb
data/filters/isaac/: J.pb  Js.pb  M.pb
data/filters/johnson/: I.pb  K.pb
data/filters/koo/: F+.pb  J+.pb  N+.pb  U+2.pb
data/filters/matthews/: V.pb
data/filters/megaprime/: i.pb  i2.pb  megacam.pb  r.pb  u.pb
data/filters/ngst/: F110.pb  F160.pb  F606.pb  F814.pb  Ks.pb  L.pb  M.pb
data/filters/not/: V.pb
data/filters/oao/: UV2.pb  UV5.pb
data/filters/ohp/: R.pb
data/filters/prime/: H.pb
data/filters/sandage/: B.pb
data/filters/sdss/: iprime.pb  u.pb  uprime.pb
data/filters/sofi/: H.pb  J.pb  Ks.pb
data/filters/susi2/: B.pb  I.pb  R.pb  Rwide.pb
data/filters/uh8k/: B.pb  I.pb  V.pb
data/filters/wfcam/: H.pb  J.pb  Y.pb
data/filters/wfi/: B.pb  EIS797.pb  I.pb  I915.pb  R.pb  U.pb  Ucomb.pb  Up.pb  V.pb
data/filters/wircam/: H.pb  J.pb  Ks.pb  Y.pb
data/seds/: AB.sed  README  SB1enl.sed  Sbc.sed  Vega.sed  a0iii.sed  a0iv.sed  a0v.sed  a2i.sed  a3iii.sed  a3v.sed  a47iv.sed  a5v.sed  a7iii.sed  a7v.sed  b0i.sed  b0v.sed  b12iii.sed  b1i.sed  b2ii.sed  b2iv.sed  b3iii.sed  b3v.sed  b57v.sed  b5i.sed  b5ii.sed  b5iii.sed  b6iv.sed  b8i.sed  b8v.sed  b9iii.sed  b9v.sed  f02iv.sed  f0ii.sed  f0iii.sed  f0v.sed  f2ii.sed  f2iii.sed  f2v.sed  f5i.sed  (+69 more)
debian/: control
doc/src/: Installing.rst  License.rst  Output.rst  Using.rst  conf.py  conf.py.in  index.rst  keys.rst  references.bib
man/: Makefile.am  Makefile.in  stuff.1  stuff.1.in  stuff.x
src/: Makefile.am  Makefile.in  celsys.c  celsys.h  clusters.c  clusters.h  cosmo.c  cosmo.h  define.h  galaxies.c  galaxies.h  globals.h  igm.c  key.h  lf.c  lf.h  main.c  makeit.c  misc.c  preflist.h  prefs.c  prefs.h  random.c  random.h  sed.c  sed.h  stars.c  stars.h
trunk/: AUTHORS  BUGS  COPYRIGHT  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  THANKS  config.h.in  configure  configure.ac  stuff.spec.in
trunk/data/filters/2mass/: J.pb
trunk/data/filters/bassel/: g.pb  r.pb
trunk/data/filters/bessell/: B.pb  H.pb  I.pb  L.pb  M.pb
trunk/data/filters/buser/: B2.pb  B3.pb  U.pb
trunk/data/filters/couch/: Bj.pb  Rf.pb
trunk/data/filters/decam/: g.pb  qe.pb
trunk/data/filters/denis/: J.pb  K.pb
trunk/data/filters/dfosc/: I.pb  R.pb
trunk/data/filters/dms/: I86.pb
trunk/data/filters/eis/: Iwide.pb  Rwide.pb  Vwide.pb
trunk/data/filters/emmi/: Iwide.pb  Vwide.pb
trunk/data/filters/focam/: B.pb  I.pb  V.pb
trunk/data/filters/fors/: B.pb  I915.pb  R.pb  U.pb  V.pb  u.pb
trunk/data/filters/hst/: F160W.pb  F814W.pb
trunk/data/filters/iras/: 25.pb
trunk/data/filters/isaac/: H.pb  Ks.pb  L.pb
trunk/data/filters/johnson/: J.pb  L.pb  R.pb
trunk/data/filters/koo/: F+2.pb  J+2.pb  N+2.pb  R.pb  U+.pb
trunk/data/filters/kron/: F.pb  J.pb
trunk/data/filters/matthews/: B.pb  U.pb
trunk/data/filters/megaprime/: corrector.pb  g.pb  mirror.pb  qe.pb  z.pb
trunk/data/filters/ngst/: Zgunn.pb
trunk/data/filters/oao/: UV1.pb  UV3.pb  UV4.pb  UV6.pb
trunk/data/filters/ohp/: qe_tk1024.pb
trunk/data/filters/prime/: J.pb  K.pb  L.pb
trunk/data/filters/sandage/: R.pb  V.pb
trunk/data/filters/sdss/: g.pb  gprime.pb  r.pb  rprime.pb  v.pb  zprime.pb
trunk/data/filters/susi2/: U.pb  V.pb
trunk/data/filters/wfcam/: K.pb  Z.pb
trunk/data/filters/wfi/: Upetc.pb  Z.pb
trunk/data/seds/: E.sed  Im.sed  Scd.sed  a0i.sed  a0iii.sed  a0iv.sed  a0v.sed  a2i.sed  a2v.sed  a3v.sed  a47iv.sed  a5iii.sed  a5v.sed  b1i.sed  b1v.sed  b2ii.sed  b2iv.sed  b3i.sed  b3iii.sed  b57v.sed  b5i.sed  b5ii.sed  b5iii.sed  b8v.sed  b9iii.sed  b9v.sed  f0i.sed  f0ii.sed  f0iii.sed  f2ii.sed  f2iii.sed  f2v.sed  f5iii.sed  f5v.sed  f6v.sed  f8i.sed  f8iv.sed  f8v.sed  g0i.sed  g0iii.sed  (+55 more)
trunk/data/seds/sky/: puxley.sed  zodiacal.sed
trunk/man/: Makefile.in  stuff.1  stuff.1.in
trunk/src/: Makefile.am  Makefile.in  clusters.c  clusters.h  cosmo.c  cosmo.h  define.h  galaxies.c  galaxies.h  globals.h  igm.h  lf.c  lf.h  main.c  makeit.c  misc.c  preflist.h  prefs.c  prefs.h  random.c  random.h  sed.c  sed.h  stars.c  types.h
