# Program Makefile for Stuff
# Copyright (C) 2005 Emmanuel Bertin.
#if USE_PLPLOT
#CPLOTSOURCE	= cplot.c
#endif

bin_PROGRAMS	= stuff
stuff_SOURCES	= clusters.c cosmo.c $(CPLOTSOURCE) galaxies.c lf.c main.c \
		  makeit.c misc.c prefs.c random.c sed.c stars.c \
		  clusters.h cosmo.h define.h galaxies.h globals.h key.h lf.h \
		  preflist.h prefs.h random.h sed.h stars.h threads.h types.h
DATE=`date +"%Y-%m-%d"`
